Bug fix? Make tests run on JDK 9+